[project]
name = "openhands-actions-test"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Tetsu-is", email = "ca02481@cartahd.com" }
]
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.0",
    "pytest>=8.3.5",
    "httpx>=0.28.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/openhands_actions_test"]

[tool.pytest.ini_options]
pythonpath = ["src"]
